--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "atob": "^2.1.2",
+    "node-fetch": "^2.6.1",
     "rss-to-json": "^1.1.2",
     "sanitize-html": "^2.3.3"
   }
